--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
    <body>
        <div id="target">
        </div>
+	   <button onclick="fetchgradesheet('CSC 1', 'CS', '2014-2015 1st')">Load..</button>
    </body>
 </html>
