--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <html>
    <head>
-        <script src="javascript/jquery.js"></script>
-        <script src="javascript/globs.js"></script>
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+		<script src="javascript/jquery.js"></script>
+        <script src="javascript/bootstrap.min.js"></script>
+		<script src="javascript/globs.js"></script>
         <script src="javascript/jqinit.js"></script>
    </head>
    <body>
        <div id="target">
        </div>
-	   <button onclick="fetchgradesheet('CSC 1', 'CS', '2014-2015 1st')">Load..</button>
+	   <button    
+	            class="btn btn-success btn-mini"
+	            onclick="fetchgradesheet('CSC 1', 'CS', '2014-2015 1st')">
+				Load..
+	   </button>
    </body>
 </html>
