[NEW!] Modified button attribute to facilitate binding of event at jQuery initialization.

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 		</table>
 	   <div id="target">
        </div>
-	   <button    
-	            class="btn btn-success btn-mini"
-	            onclick="fetchgradesheet();">
+	   <button  
+	            id="loadcontents"  
+	            class="btn btn-success btn-mini">
 				Load..
 	   </button>
    </body>
